force-app/main/default/objects/Job__c/fields/Job_Scoring_Config__c.field-meta.xml
<CustomField>
    <fullName>Job_Scoring_Config__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Scoring Config</label>
    <referenceTo>Job_Scoring_Config__c</referenceTo>
    <relationshipLabel>Job Applications</relationshipLabel>
    <relationshipName>Job_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>